...
    ];

    return _children[_currentIndex];
  }

  final List<String> _destinations = [
    'Stats',
    'Skills',
    'Talents',
    'Inventory',
    'Notes',
    'Powers',
  ];

  List<BottomNavigationBarItem> navigation() {
    return _destinations.map((destination) {
      return BottomNavigationBarItem(
...
