...
          elevation: Theme.of(context).appBarTheme.elevation,
          forceElevated: true,
          actions: <Widget>[
            ExportButton(),
            IconButton(
              icon: Icon(Icons.delete),
              tooltip: 'Delete character',
              onPressed: () async {
                final result = await showDialog(
                  context: context,
                  builder: (BuildContext context) {
                    return ConfirmDialog(
                      child: Column(
                        children: <Widget>[
                          Text('Really delete this character?'),
                          Text('This cannot be undone.')
                        ],
                      ),
                    );
                  },
                );
...
